[gd_scene load_steps=5 format=3 uid="uid://bhnvjhtyhh65c"]

[ext_resource type="Script" path="res://im_raum.gd" id="1_bwh5w"]
[ext_resource type="FontFile" uid="uid://baeom0xb31cqk" path="res://ressources/PressStart2P-Regular.ttf" id="1_niiwp"]
[ext_resource type="AudioStream" uid="uid://btxncrt2vf6cm" path="res://ressources/Click.mp3" id="2_lmnhy"]
[ext_resource type="Theme" uid="uid://bqe7fuww5f7vh" path="res://ressources/buttontheme.tres" id="3_pic11"]

[node name="ImRaum" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bwh5w")

[node name="Click" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_lmnhy")

[node name="Raumname" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -720.0
offset_top = -389.0
offset_right = -592.0
offset_bottom = -366.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_niiwp")
theme_override_font_sizes/font_size = 26

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 307.0
offset_top = 314.0
offset_right = 635.0
offset_bottom = 369.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_pic11")
theme_override_fonts/font = ExtResource("1_niiwp")
text = "Start Game"

[node name="LeaveButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -631.0
offset_top = 305.0
offset_right = -303.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_pic11")
theme_override_fonts/font = ExtResource("1_niiwp")
text = "Leave"

[node name="NumberOfPlayers" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 623.0
offset_top = -384.0
offset_right = 671.0
offset_bottom = -361.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_niiwp")

[node name="CreatorLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -505.0
offset_top = -7.0
offset_right = -393.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_niiwp")

[node name="vsLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_niiwp")
text = "vs"

[node name="JoinedLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 424.0
offset_top = 2.0
offset_right = 536.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_niiwp")

[node name="GetRoom" type="HTTPRequest" parent="."]

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="LeaveButton" to="." method="_on_leave_button_pressed"]
[connection signal="request_completed" from="GetRoom" to="." method="_on_get_room_request_completed"]
